sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:8: error: reassignment to val
	i=v;
         ^AlgInsertionSort:10: error: not found: value v
		if (plusPetit(v,j-1)) {
                              ^AlgInsertionSort:14: error: reassignment to val
		j=j-1;
                 ^