sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
var i=0;
var lgr=getNombreValeurs();


	for (i<- 1 to lgr-1) {
	i=v;
		for (j<- i to 0) {
		if (plusPetit(v,j-1)) {
			copie(j-1,j);
		}
		else 
		j=j-1;
		
		
	}
	}


}



/*Pour tout i dans [1,lgr-1]
  stocker la valeur de la case i dans une variable v
  recopier la case i-1 dans i, si i-1 contient une valeur plus grande que v
  recopier la case i-2 dans i-1, si i-2 contient une valeur plus grande que v
  recopier la case i-3 dans i-2, si i-3 contient une valeur plus grande que v
  rgjopier la case i-4 dans i-3, si i-4 contient une valeur plus grande que v
  ...
  recopier v dans la dernière case recopiée plus haut*/
  